--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/seo": "^2.0.0-rc.15",
     "@nuxtjs/sitemap": "^6.0.0-beta.1",
     "@vueuse/core": "^10.11.0",
+    "axios": "^1.7.7",
     "gsap": "^3.12.5",
     "lodash": "^4.17.21",
     "nuxt": "^3.13.0",
