добавлены заказы клиента чтение и запись

--- a/package.json
+++ b/package.json
@@ -12,35 +12,37 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@nuxt/content": "^2.13.2",
-    "@nuxt/scripts": "^0.6.6",
-    "@nuxtjs/robots": "^4.0.1",
-    "@nuxtjs/seo": "^2.0.0-rc.15",
-    "@nuxtjs/sitemap": "^6.0.0-beta.1",
-    "@vueuse/core": "^10.11.0",
+    "@nuxt/devtools": "^1.5.1",
+    "@nuxt/scripts": "^0.9.3",
+    "@nuxtjs/robots": "^4.1.7",
+    "@nuxtjs/seo": "^2.0.0-rc.21",
+    "@nuxtjs/sitemap": "^6.1.0",
+    "@vueuse/core": "^11.1.0",
     "axios": "^1.7.7",
     "gsap": "^3.12.5",
     "lodash": "^4.17.21",
-    "nuxt": "^3.13.0",
+    "nuxt": "^3.13.2",
     "nuxt-content-assets": "^1.4.4",
     "nuxt-mail": "^5.0.1",
-    "sass": "^1.77.5",
+    "nuxt-security": "^2.0.0",
+    "sass": "^1.79.3",
     "slugify": "^1.6.6",
-    "unstorage": "^1.10.2",
+    "unstorage": "^1.12.0",
     "vee-validate": "^4.13.2",
-    "vue": "^3.4.34",
+    "vue": "^3.5.8",
     "vue-debounce": "^5.0.0",
-    "vue-router": "^4.3.3",
-    "vue-tsc": "^2.0.29",
+    "vue-router": "^4.4.5",
+    "vue-tsc": "^2.1.6",
     "vue-yandex-maps": "^2.1.4",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.0",
-    "@types/lodash": "^4.17.6",
+    "@types/lodash": "^4.17.9",
     "@types/node-fetch": "^2.6.11",
-    "@types/nodemailer": "^6.4.15",
-    "@types/vue": "^2.0.0",
-    "vite-plugin-vuetify": "^2.0.3",
+    "@types/nodemailer": "^6.4.16",
+    "@types/vue": "^1.0.31",
+    "vite-plugin-vuetify": "^2.0.4",
     "vuetify": "^3.6.13"
   }
 }
