--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxtjs/sitemap": "^6.1.0",
     "@vueuse/core": "^11.1.0",
     "axios": "^1.7.7",
+    "dayjs-nuxt": "^2.1.11",
     "gsap": "^3.12.5",
     "lodash": "^4.17.21",
     "nuxt": "^3.13.2",
