спецордера почти готовы

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vueuse/core": "^11.1.0",
     "axios": "^1.7.7",
     "dayjs-nuxt": "^2.1.11",
+    "exceljs": "^4.4.0",
     "gsap": "^3.12.5",
     "lodash": "^4.17.21",
     "nuxt": "^3.13.2",
