--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/content": "^2.13.2",
     "@nuxt/devtools": "^1.5.1",
     "@nuxt/scripts": "^0.9.3",
+    "@nuxtjs/i18n": "^9.0.0",
     "@nuxtjs/robots": "^4.1.7",
     "@nuxtjs/seo": "^2.0.0-rc.21",
     "@nuxtjs/sitemap": "^6.1.0",
