--- a/package.json
+++ b/package.json
@@ -19,18 +19,20 @@
     "@nuxtjs/robots": "^4.1.7",
     "@nuxtjs/seo": "^2.0.0-rc.21",
     "@nuxtjs/sitemap": "^6.1.0",
+    "@vue/devtools-api": "^7.6.4",
     "@vueuse/core": "^11.1.0",
     "axios": "^1.7.7",
     "dayjs-nuxt": "^2.1.11",
     "exceljs": "^4.4.0",
     "gsap": "^3.12.5",
     "lodash": "^4.17.21",
-    "nuxt": "^3.13.2",
+    "nuxt": "^3.14.159",
     "nuxt-content-assets": "^1.4.4",
     "nuxt-mail": "^5.0.1",
     "nuxt-security": "^2.0.0",
     "sass": "^1.79.3",
     "slugify": "^1.6.6",
+    "unhead": "^1.11.11",
     "unstorage": "^1.12.0",
     "vee-validate": "^4.13.2",
     "vue": "^3.5.8",
