--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "@nuxt/content": "^2.13.2",
     "@nuxt/devtools": "^1.5.1",
     "@nuxt/scripts": "^0.9.3",
-    "@nuxtjs/i18n": "^9.0.0",
     "@nuxtjs/robots": "^4.1.7",
     "@nuxtjs/seo": "^2.0.0-rc.21",
     "@nuxtjs/sitemap": "^6.1.0",
     "@vue/devtools-api": "^7.6.4",
     "@vueuse/core": "^11.1.0",
     "axios": "^1.7.7",
+    "better-sqlite3": "^11.5.0",
     "dayjs-nuxt": "^2.1.11",
+    "drizzle-orm": "^0.36.2",
     "exceljs": "^4.4.0",
     "gsap": "^3.12.5",
     "lodash": "^4.17.21",
@@ -30,6 +31,7 @@
     "nuxt-content-assets": "^1.4.4",
     "nuxt-mail": "^5.0.1",
     "nuxt-security": "^2.0.0",
+    "objection": "^3.1.5",
     "sass": "^1.79.3",
     "slugify": "^1.6.6",
     "unhead": "^1.11.11",
@@ -44,10 +46,12 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "@types/better-sqlite3": "^7.6.11",
     "@types/lodash": "^4.17.9",
     "@types/node-fetch": "^2.6.11",
     "@types/nodemailer": "^6.4.16",
     "@types/vue": "^1.0.31",
+    "drizzle-kit": "^0.28.1",
     "nuxt-scheduler": "^0.1.9",
     "vite-plugin-vuetify": "^2.0.4",
     "vuetify": "^3.6.13",
